docs/1.0rc1/_sources/tutorials/analysis-time/light_curve_flare.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/analysis-time/light_curve_flare.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_tutorials_analysis-time_light_curve_flare.py>`
        to download the full example code or to run this example in your browser via Binder

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_analysis-time_light_curve_flare.py:


Light curves for flares
=======================

Compute the light curve of a PKS 2155-304 flare on 5 minutes time intervals.

Prerequisites
-------------

-  Understanding of how the light curve estimator works, please refer to
   the `light curve notebook <light_curve.ipynb>`__.

Context
-------

Frequently, especially when studying flares of bright sources, it is
necessary to explore the time behaviour of a source on short time
scales, in particular on time scales shorter than observing runs.

A typical example is given by the flare of PKS 2155-304 during the night
from July 29 to 30 2006. See the `following
article <https://ui.adsabs.harvard.edu/abs/2009A%26A...502..749A/abstract>`__.

**Objective: Compute the light curve of a PKS 2155-304 flare on 5
minutes time intervals, i.e. smaller than the duration of individual
observations.**

Proposed approach
-----------------

We have seen in the general presentation of the light curve estimator,
see `light curve notebook <light_curve.ipynb>`__, Gammapy produces
datasets in a given time interval, by default that of the parent
observation. To be able to produce datasets on smaller time steps, it is
necessary to split the observations into the required time intervals.

This is easily performed with the `~gammapy.data.Observations.select_time` method of
`~gammapy.data.Observations`. If you pass it a list of time intervals
it will produce a list of time filtered observations in a new
`~gammapy.data.Observations` object. Data reduction can then be
performed and will result in datasets defined on the required time
intervals and light curve estimation can proceed directly.

In summary, we have to:

-  Select relevant `~gammapy.data.Observations` from the
   `~gammapy.data.DataStore`
-  Apply the time selection in our predefined time intervals to obtain a
   new `~gammapy.data.Observations`
-  Perform the data reduction (in 1D or 3D)
-  Define the source model
-  Extract the light curve from the reduced dataset

Here, we will use the PKS 2155-304 observations from the H.E.S.S. first
public test data release. We will use time intervals of 5 minutes
duration. The tutorial is implemented with the intermediate level API.

Setup
-----

As usual, we’ll start with some general imports…

.. GENERATED FROM PYTHON SOURCE LINES 64-87

.. code-block:: python3


    import logging
    import numpy as np

    # %matplotlib inline
    import astropy.units as u
    from astropy.coordinates import Angle, SkyCoord
    from astropy.time import Time
    from regions import CircleSkyRegion

    log = logging.getLogger(__name__)

    from gammapy.data import DataStore
    from gammapy.datasets import Datasets, SpectrumDataset
    from gammapy.estimators import LightCurveEstimator
    from gammapy.makers import (
        ReflectedRegionsBackgroundMaker,
        SafeMaskMaker,
        SpectrumDatasetMaker,
    )
    from gammapy.maps import MapAxis, RegionGeom
    from gammapy.modeling.models import PowerLawSpectralModel, SkyModel








.. GENERATED FROM PYTHON SOURCE LINES 88-90

Check setup
-----------

.. GENERATED FROM PYTHON SOURCE LINES 90-95

.. code-block:: python3

    from gammapy.utils.check import check_tutorials_setup

    check_tutorials_setup()






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    System:

            python_executable      : /Users/adonath/github/adonath/gammapy/.tox/build_docs/bin/python 
            python_version         : 3.9.12     
            machine                : arm64      
            system                 : Darwin     


    Gammapy package:

            version                : 0.20.2.dev596+g96acaf17f 
            path                   : /Users/adonath/github/adonath/gammapy/.tox/build_docs/lib/python3.9/site-packages/gammapy 


    Other packages:

            numpy                  : 1.23.3     
            scipy                  : 1.9.1      
            astropy                : 5.1        
            regions                : 0.6        
            click                  : 8.1.3      
            yaml                   : 6.0        
            IPython                : 8.5.0      
            jupyterlab             : not installed 
            matplotlib             : 3.6.0      
            pandas                 : not installed 
            healpy                 : 1.16.1     
            iminuit                : 2.17.0     
            sherpa                 : 4.14.1     
            naima                  : 0.10.0     
            emcee                  : 3.1.3      
            corner                 : 2.2.1      


    Gammapy environment variables:

            GAMMAPY_DATA           : /Users/adonath/github/gammapy/gammapy-data 





.. GENERATED FROM PYTHON SOURCE LINES 96-101

Select the data
---------------

We first set the datastore.


.. GENERATED FROM PYTHON SOURCE LINES 101-105

.. code-block:: python3


    data_store = DataStore.from_dir("$GAMMAPY_DATA/hess-dl3-dr1/")









.. GENERATED FROM PYTHON SOURCE LINES 106-108

Now we select observations within 2 degrees of PKS 2155-304.


.. GENERATED FROM PYTHON SOURCE LINES 108-122

.. code-block:: python3


    target_position = SkyCoord(329.71693826 * u.deg, -30.2255890 * u.deg, frame="icrs")
    selection = dict(
        type="sky_circle",
        frame="icrs",
        lon=target_position.ra,
        lat=target_position.dec,
        radius=2 * u.deg,
    )
    obs_ids = data_store.obs_table.select_observations(selection)["OBS_ID"]
    observations = data_store.get_observations(obs_ids)
    print(f"Number of selected observations : {len(observations)}")






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Number of selected observations : 21




.. GENERATED FROM PYTHON SOURCE LINES 123-129

Define time intervals
---------------------

We create the list of time intervals. Each time interval is an
`astropy.time.Time` object, containing a start and stop time.


.. GENERATED FROM PYTHON SOURCE LINES 129-138

.. code-block:: python3


    t0 = Time("2006-07-29T20:30")
    duration = 10 * u.min
    n_time_bins = 35
    times = t0 + np.arange(n_time_bins) * duration
    time_intervals = [Time([tstart, tstop]) for tstart, tstop in zip(times[:-1], times[1:])]
    print(time_intervals[0].mjd)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [53945.85416667 53945.86111111]




.. GENERATED FROM PYTHON SOURCE LINES 139-149

Filter the observations list in time intervals
----------------------------------------------

Here we apply the list of time intervals to the observations with
`~gammapy.data.Observations.select_time()`.

This will return a new list of Observations filtered by time_intervals.
For each time interval, a new observation is created that converts the
intersection of the GTIs and time interval.


.. GENERATED FROM PYTHON SOURCE LINES 149-156

.. code-block:: python3


    short_observations = observations.select_time(time_intervals)
    # check that observations have been filtered
    print(f"Number of observations after time filtering: {len(short_observations)}\n")
    print(short_observations[1].gti)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Number of observations after time filtering: 44

    GTI info:
    - Number of GTIs: 1
    - Duration: 600.0 s
    - Start: 175898401.00000018 s MET
    - Start: 2006-07-29T20:41:05.184 (time standard: TT)
    - Stop: 175899001.00000018 s MET
    - Stop: 2006-07-29T20:51:05.184 (time standard: TT)





.. GENERATED FROM PYTHON SOURCE LINES 157-163

As we can see, we have now observations of duration equal to the chosen
time step.

Now data reduction and light curve extraction can proceed exactly as
before.


.. GENERATED FROM PYTHON SOURCE LINES 166-174

Building 1D datasets from the new observations
----------------------------------------------

Here we will perform the data reduction in 1D with reflected regions.

*Beware, with small time intervals the background normalization with OFF
regions might become problematic.*


.. GENERATED FROM PYTHON SOURCE LINES 177-187

Defining the geometry
~~~~~~~~~~~~~~~~~~~~~

We define the energy axes. As usual, the true energy axis has to cover a
wider range to ensure a good coverage of the measured energy range
chosen.

We need to define the ON extraction region. Its size follows typical
spectral extraction regions for HESS analyses.


.. GENERATED FROM PYTHON SOURCE LINES 187-200

.. code-block:: python3


    # Target definition
    energy_axis = MapAxis.from_energy_bounds("0.4 TeV", "20 TeV", nbin=10)
    energy_axis_true = MapAxis.from_energy_bounds(
        "0.1 TeV", "40 TeV", nbin=20, name="energy_true"
    )

    on_region_radius = Angle("0.11 deg")
    on_region = CircleSkyRegion(center=target_position, radius=on_region_radius)

    geom = RegionGeom.create(region=on_region, axes=[energy_axis])









.. GENERATED FROM PYTHON SOURCE LINES 201-207

Creation of the data reduction makers
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

We now create the dataset and background makers for the selected
geometry.


.. GENERATED FROM PYTHON SOURCE LINES 207-215

.. code-block:: python3


    dataset_maker = SpectrumDatasetMaker(
        containment_correction=True, selection=["counts", "exposure", "edisp"]
    )
    bkg_maker = ReflectedRegionsBackgroundMaker()
    safe_mask_masker = SafeMaskMaker(methods=["aeff-max"], aeff_percent=10)









.. GENERATED FROM PYTHON SOURCE LINES 216-221

Creation of the datasets
~~~~~~~~~~~~~~~~~~~~~~~~

Now we perform the actual data reduction in the time_intervals.


.. GENERATED FROM PYTHON SOURCE LINES 223-235

.. code-block:: python3

    datasets = Datasets()

    dataset_empty = SpectrumDataset.create(geom=geom, energy_axis_true=energy_axis_true)

    for obs in short_observations:
        dataset = dataset_maker.run(dataset_empty.copy(), obs)

        dataset_on_off = bkg_maker.run(dataset, obs)
        dataset_on_off = safe_mask_masker.run(dataset_on_off, obs)
        datasets.append(dataset_on_off)









.. GENERATED FROM PYTHON SOURCE LINES 236-247

Define the Model
----------------

The actual flux will depend on the spectral shape assumed. For
simplicity, we use the power law spectral model of index 3.4 used in the
`reference
paper <https://ui.adsabs.harvard.edu/abs/2009A%26A...502..749A/abstract>`__.

Here we use only a spectral model in the
`~gammapy.modeling.models.SkyModel` object.


.. GENERATED FROM PYTHON SOURCE LINES 247-256

.. code-block:: python3


    spectral_model = PowerLawSpectralModel(
        index=3.4, amplitude=2e-11 * u.Unit("1 / (cm2 s TeV)"), reference=1 * u.TeV
    )
    spectral_model.parameters["index"].frozen = False

    sky_model = SkyModel(spatial_model=None, spectral_model=spectral_model, name="pks2155")









.. GENERATED FROM PYTHON SOURCE LINES 257-262

Assign to model to all datasets
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

We assign each dataset its spectral model


.. GENERATED FROM PYTHON SOURCE LINES 262-266

.. code-block:: python3


    datasets.models = sky_model









.. GENERATED FROM PYTHON SOURCE LINES 267-274

Extract the light curve
-----------------------

We first create the `~gammapy.estimators.LightCurveEstimator` for the
list of datasets we just produced. We give the estimator the name of the
source component to be fitted.


.. GENERATED FROM PYTHON SOURCE LINES 274-283

.. code-block:: python3


    lc_maker_1d = LightCurveEstimator(
        energy_edges=[0.7, 20] * u.TeV,
        source="pks2155",
        time_intervals=time_intervals,
        selection_optional=None,
    )









.. GENERATED FROM PYTHON SOURCE LINES 284-289

We can now perform the light curve extraction itself. To compare with
the `reference
paper <https://ui.adsabs.harvard.edu/abs/2009A%26A...502..749A/abstract>`__,
we select the 0.7-20 TeV range.


.. GENERATED FROM PYTHON SOURCE LINES 291-294

.. code-block:: python3

    lc_1d = lc_maker_1d.run(datasets)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    WZQCCbcv SpectrumDatasetOnOff     HESS ... 329.71666666667 -29.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    tb2fSxqq SpectrumDatasetOnOff     HESS ... 329.71666666667 -29.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    TxBS6T-B SpectrumDatasetOnOff     HESS ...  329.71666666667 -29.725555555556
    -x7r6F2z SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    GzdQvZvk SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    _hltlv5v SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    GI2Ym-IS SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
    ZdK-NAyg SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    Kb-PghJ5 SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    cyAaZnzw SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    QzrJ46WK SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
    Te5Mi4_p SpectrumDatasetOnOff     HESS ...  329.71666666667 -30.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    Hu8UXhZc SpectrumDatasetOnOff     HESS ... 329.71666666667 -30.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    tRfv5lDN SpectrumDatasetOnOff     HESS ... 329.71666666667 -30.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    SH79Fhi_ SpectrumDatasetOnOff     HESS ... 329.71666666667 -30.725555555556
    BYt4QwYj SpectrumDatasetOnOff     HESS ... 329.71666666667 -29.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    EsAFNW0_ SpectrumDatasetOnOff     HESS ... 329.71666666667 -29.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    wZctO13K SpectrumDatasetOnOff     HESS ... 329.71666666667 -29.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    2iexShwx SpectrumDatasetOnOff     HESS ...  329.71666666667 -29.725555555556
    eIrPE89h SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    fdER1qDf SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    bibWSI1G SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    Vtl_N_9F SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
    KKO7VjRB SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    FzHWSXkm SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    fn0P0xmo SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    zCxDlaiK SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    diYzaXfZ SpectrumDatasetOnOff     HESS ... 329.71666666667 -30.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    ChEMYcXU SpectrumDatasetOnOff     HESS ... 329.71666666667 -30.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    qts6Y7Ur SpectrumDatasetOnOff     HESS ... 329.71666666667 -30.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    VDmu3RNp SpectrumDatasetOnOff     HESS ... 329.71666666667 -30.725555555556
    Q-kURqAu SpectrumDatasetOnOff     HESS ... 329.71666666667 -29.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    JlLCxQL_ SpectrumDatasetOnOff     HESS ... 329.71666666667 -29.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT         DEC_PNT     
                                           ...       deg             deg       
    -------- -------------------- -------- ... --------------- ----------------
    LDPaZjKP SpectrumDatasetOnOff     HESS ... 329.71666666667 -29.725555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    nQANk-TU SpectrumDatasetOnOff     HESS ...  329.71666666667 -29.725555555556
    drLZofSe SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    fqeyKwBU SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    yHUREWWl SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    1NAI6gae SpectrumDatasetOnOff     HESS ... 329.137966660662 -30.225555555556
    bavfuptj SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    QYp9Dnfv SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    LBCCYOP- SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
      NAME           TYPE         TELESCOP ...      RA_PNT          DEC_PNT     
                                           ...       deg              deg       
    -------- -------------------- -------- ... ---------------- ----------------
    fz_xpwV0 SpectrumDatasetOnOff     HESS ... 330.295366672678 -30.225555555556
    KbtYafMh SpectrumDatasetOnOff     HESS ...  329.71666666667 -30.725555555556




.. GENERATED FROM PYTHON SOURCE LINES 295-297

Finally we plot the result for the 1D lightcurve:


.. GENERATED FROM PYTHON SOURCE LINES 297-299

.. code-block:: python3


    lc_1d.plot(marker="o")



.. image-sg:: /tutorials/analysis-time/images/sphx_glr_light_curve_flare_001.png
   :alt: light curve flare
   :srcset: /tutorials/analysis-time/images/sphx_glr_light_curve_flare_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  32.928 seconds)


.. _sphx_glr_download_tutorials_analysis-time_light_curve_flare.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: binder-badge

      .. image:: images/binder_badge_logo.svg
        :target: https://mybinder.org/v2/gh/gammapy/gammapy-webpage/master?urlpath=lab/tree/notebooks/dev/tutorials/analysis-time/light_curve_flare.ipynb
        :alt: Launch binder
        :width: 150 px

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: light_curve_flare.py <light_curve_flare.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: light_curve_flare.ipynb <light_curve_flare.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
